# doom

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
doom/: dmvis.py  drawmaps2.py  readbinaryfile.py  regenimages.py  ripmidis.py
playtest_wads/: anox_v2.wad
prefabs/: blood_bath.dbprefab  caution_column.dbprefab
scripts/: drawmaps2.py  regen_images.sh
submitted_wads/: castle_of_doom.wad
templates/mbf21/: README.md  doommake.project.properties
templates/mbf21/src/: wadinfo.txt
wads/: MAP01.dbs  MAP01.wad  speed002.dbs  speed002.wad
wads/001_speed001/: README.md  doommake.project.properties  doommake.properties  speed001.wad
wads/002_speed002/: README.md  doommake.project.properties
wads/003_castle_of_doom/: README.md  castle_of_doom.dbs  castle_of_doom.wad  doommake.project.properties
wads/004_tomb_of_doom/: README.md  build.txt  doommake.project.properties
wads/005_jungle_fever/: README.md  doommake.properties  doommake.script
wads/006_ouroboros/: README.md  TODO.md  doommake.project.properties  doommake.properties
wads/006_speed003/: README.md  doommake.project.properties
wads/007_anox/: README.md  doommake.project.properties  doommake.script
wads/008_auto/: README.md
wads/009_thereturn/: README.md  doommake.project.properties
wads/castle_of_doom/: README.md
wads/colosseum/: MAP01.dbs  MAP01.wad
wads/speed001/: README.md  speed001.dbs
wads/speed002/: README.md  speed002.dbs  speed002.wad
wads/tomb_of_doom/: MAP01.wad  MAP01_tex.wad  README.md  build.sh  tomb_of_doom.dbs  tomb_of_doom.wad
(+36 files in other folders)
